@@ -15,6 +15,7 @@
 - exchanged functionality between `>field` (it performs `MAX`) `<field` (it performs `MIN`) in TextDB
 - added `NOSQL/TABLe/TEXTDB().release()` method
 - extended `controller.view()` by adding a support for rendering views from plugins (e.g. `#plugin_name/view_name`)
+- extended `U.reader([url/items])` by adding support for `URL` addresses (content must be TextDB)
 
 ========================
 0.0.58
